--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,38 @@
 	height: 100vh;
 	background-color: rgb(7, 31, 42);
 }
+
+.navbar {
+	border-right: 1px solid #888;
+	width: 275px;
+	height: 100%;
+}
+
+.nav-profile img {
+	display: block;
+	width: 100%;
+}
+
+.nav-links ul {
+	padding: 0;
+	margin: 0;
+}
+
+.nav-links li {
+	color: white;
+	list-style-type: none;
+}
+
+.nav-link {
+	border-bottom: 1px solid #888;
+	padding: 20px 0;
+	padding-left: 30px;
+}
+
+.nav-link:hover {
+	background-color: rgb(7, 31, 60);
+}
+
+.nav-link i {
+	margin-right: 0.5em;
+}
