--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,14 +84,16 @@ li {
 	width: 100%;
 	flex: 1 1 auto;
 	position: relative;
+	background-color: #6699cc;
+	overflow: hidden;
 }
 
 #stars {
 	position: absolute;
 	top: 0;
 	left: 0;
-	min-width: 100%;
-	min-height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .messagebox {
@@ -124,10 +126,11 @@ li {
 }
 
 .message {
+	color: white;
 	display: inline-block;
 	width: 80%;
 	padding: 13px;
-	background-color: purple;
+	background: linear-gradient(to bottom, #0080FA 0%, #0045E1 100%);
 	border-radius: 16px;
 	position: relative;
 	margin-bottom: 30px;
@@ -141,7 +144,7 @@ li {
 	bottom: 0;
 	width: 20px;
 	height: 20px;
-	background: purple;
+	background: linear-gradient(to bottom, #0049FA 0%, #0045E1 100%);;
 	border-bottom-right-radius: 12px;
 }
 
@@ -149,8 +152,8 @@ li {
   content: "";
   position: absolute;
   bottom: 3px;
-  left: -10px;
-  width: 10px;
+  left: -11px;
+  width: 11px;
   height: 20px;
   background: #222;
   border-bottom-right-radius: 10px;
