--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,7 +144,7 @@ li {
 	bottom: 0;
 	width: 20px;
 	height: 20px;
-	background: linear-gradient(to bottom, #0049FA 0%, #0045E1 100%);;
+	background: linear-gradient(to bottom, #0049FA 0%, #0045E1 100%);
 	border-bottom-right-radius: 12px;
 }
 
@@ -157,4 +157,8 @@ li {
   height: 20px;
   background: #222;
   border-bottom-right-radius: 10px;
+}
+
+::selection {
+	background-color: lime;
 }
