--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ li {
 	display: inline-block;
 }
 
-.navbar a {
+.navbar a, .subnav a {
 	color: white;
 	text-decoration: none;
 }
@@ -99,12 +99,13 @@ li {
 .messagebox {
 	position: absolute;
 	transform: translate(50%, 0);
+	overflow-y: scroll;
 	width: 50%;
 	height: 95%;
 	margin-top: 20px;
 	background-color: #222;
 	padding: 0px 30px;
-	border-radius: 20px;
+	border-radius: 20px 5px 5px 20px;
 }
 
 .messagebox h1 {
@@ -122,7 +123,25 @@ li {
 }
 
 .avatar img {
-	width: 40px;
+	width: 100%;
+}
+
+.message-container {
+	margin-bottom: 30px;
+}
+
+.message-image {
+	margin-left: 70px;
+	display: inline-block;
+}
+
+.message-image img {
+	width: 95%;
+}
+
+.image-caption {
+	color: gray;
+	font-size: 12px;
 }
 
 .message {
@@ -133,7 +152,6 @@ li {
 	background: linear-gradient(to bottom, #0080FA 0%, #0045E1 100%);
 	border-radius: 16px;
 	position: relative;
-	margin-bottom: 30px;
 	margin-left: 30px;
 }
 
@@ -160,5 +178,19 @@ li {
 }
 
 ::selection {
-	background-color: lime;
+	background-color: darkblue;
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px gray;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: maroon;
+  border-radius: 10px;
 }
