--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,8 +80,14 @@ li {
 	padding: 15px 30px;
 }
 
+.page-display {
+	height: 100%;
+	overflow-y: auto;
+}
+
 .home {
 	width: 100%;
+	height: 100%;
 	flex: 1 1 auto;
 	position: relative;
 	background-color: #6699cc;
@@ -175,6 +181,53 @@ li {
   height: 20px;
   background: #222;
   border-bottom-right-radius: 10px;
+}
+
+.skills {
+	height: 100%;
+}
+
+.banner {
+	width: 100%;
+	height: 100%;
+	padding: 5%;
+	padding-left: 8%;
+	padding-right: 3%;
+	background-color: #1b294b;
+}
+
+.banner:nth-of-type(even) {
+	background-color: #1b296b;
+}
+
+.banner-content, .banner-left {
+	height: 100%;
+}
+
+.banner-left {
+	display: inline-block;
+	text-align: center;
+}
+
+.banner-left img {
+	height: 70%;
+}
+
+.banner-left h1 {
+	margin-top: 15px;
+	font-size: 60px;
+}
+
+.banner-right {
+	display: inline-block;
+	width: 50%;
+	float: right;
+	vertical-align: top;
+	padding-top: 30px;
+}
+
+.banner-right p {
+	font-size: 18px;
 }
 
 ::selection {
