--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,43 +191,48 @@ li {
 	width: 100%;
 	height: 100%;
 	padding: 5%;
-	padding-left: 8%;
 	padding-right: 3%;
-	background-color: #1b294b;
 }
 
 .banner:nth-of-type(even) {
 	background-color: #1b296b;
 }
 
-.banner-content, .banner-left {
+.banner-content, .banner-left, .banner-right {
 	height: 100%;
 }
 
 .banner-left {
+	width: 50%;
 	display: inline-block;
+}
+
+.banner-logo {
 	text-align: center;
 }
 
-.banner-left img {
+.banner-logo img {
 	height: 70%;
 }
 
-.banner-left h1 {
-	margin-top: 15px;
+.banner-logo h1 {
 	font-size: 60px;
+	margin-top: 15px;
+}
+
+.banner-text {
+	padding-top: 25px;
+	width: 50%;
+	vertical-align: top;
 }
 
 .banner-right {
-	display: inline-block;
 	width: 50%;
-	float: right;
-	vertical-align: top;
-	padding-top: 30px;
+	display: inline-block;
 }
 
-.banner-right p {
-	font-size: 18px;
+.banner-text p, .banner-text span {
+	font-size: 19px;
 }
 
 ::selection {
