--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,11 +24,20 @@ li {
 	width: 275px;
 	height: 100%;
 	display: inline-block;
+	background-color: rgb(7, 31, 42);
+	-ms-overflow-style: none; 
+	scrollbar-width: none;
+	overflow-y: scroll; 
+}
+
+.navbar::-webkit-scrollbar {
+  display: none;
 }
 
 .navbar a, .subnav a {
 	color: white;
 	text-decoration: none;
+	white-space: nowrap;
 }
 
 .nav-profile img {
@@ -60,12 +69,14 @@ li {
 
 .subnav {
 	width: 100%;
+	height: 50px;
 	border-bottom: 1px solid #444;
 }
 
 .subnav ul {
 	width: 100%;
-	display: flex;
+	display: inline-flex;
+	overflow: hidden;
 }
 
 .subnav li {
@@ -73,7 +84,21 @@ li {
 	flex-grow: 1;
 }
 
+#menu {
+	margin-top: -7px;
+	padding-right: 0px;
+	padding-left: 13px;
+	display: inline-block;
+	width: 60px;
+	height: 55px;
+	font-size: 24px;
+	cursor: pointer;
+	display: none;
+	border-left: 2px solid #444;
+}
+
 .subnav-link {
+	vertical-align: top;
 	text-align: center;
 	border-bottom: none;
 	border-right: 1px solid #444;
@@ -185,25 +210,26 @@ li {
 
 .skills, .experience {
 	height: 100%;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .banner-wrapper {
-	width: 100%;
-	height: 100%;
+	width: 100%;;
+	min-height: 100%;
 	position: relative;
 }
 
 .banner {
 	width: 100%;
-	height: 100%;
+	min-height: calc(100vh - 50px);
 	padding: 5%;
 	padding-right: 3%;
 	position: relative;
 }
 
 .banner-content, .banner-left, .banner-right {
-	height: 100%;
+	min-height: 100%;
 }
 
 .banner-left {
@@ -216,12 +242,16 @@ li {
 }
 
 .banner-logo img {
-	height: 70%;
+	height: 55vh;
 }
 
 .banner-logo h1 {
 	font-size: 60px;
 	margin-top: 15px;
+}
+
+.mobile-header {
+	display: none;
 }
 
 .banner-text {
