--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,8 @@ li {
 	border-radius: 50%; 
 	vertical-align: middle;
 	overflow: hidden;
+	position: absolute;
+	bottom: 0;
 }
 
 .avatar img {
@@ -159,6 +161,7 @@ li {
 
 .message-container {
 	margin-bottom: 30px;
+	position: relative;
 }
 
 .message-image {
@@ -183,7 +186,7 @@ li {
 	background: linear-gradient(to bottom, #0080FA 0%, #0045E1 100%);
 	border-radius: 16px;
 	position: relative;
-	margin-left: 30px;
+	margin-left: 70px;
 }
 
 .message:before {
